# signer.so

./: Java_com_adjust_sdk_sig_NativeLibHelper_nOnResume.txt  Java_com_adjust_sdk_sig_NativeLibHelper_nSign.txt  parse.txt  progress.md
.codebase-memory/: artifact.json
.planning/: .active_plan
.planning/2026-07-15-download-adjust-signature-sdk-releases/: findings.md  progress.md  task_plan.md
adjust_signature_sdk/: download_all.py
adjust_signature_sdk/tests/: test_download_all.py
adjust_signature_sdk/v3.0.0/: adjust-android-signature-3.0.0.aar
adjust_signature_sdk/v3.10.0/: adjust-android-signature-3.10.0.aar
adjust_signature_sdk/v3.13.0/: adjust-android-signature-3.13.0.aar
adjust_signature_sdk/v3.14.1/: adjust-android-signature-3.14.1.aar
adjust_signature_sdk/v3.20.2/: adjust-android-signature-3.20.2.aar
adjust_signature_sdk/v3.24.0-beta/: adjust-android-signature-3.24.0.aar
adjust_signature_sdk/v3.24.1-beta/: adjust-android-signature-3.24.1.aar
adjust_signature_sdk/v3.3.0/: adjust-android-signature-3.3.0.aar
adjust_signature_sdk/v3.35.1/: adjust-android-signature-3.35.1.aar
adjust_signature_sdk/v3.5.0/: adjust-android-signature-3.5.0.aar
adjust_signature_sdk/v3.5.1/: adjust-android-signature-3.5.1.aar
adjust_signature_sdk/v3.6.0/: adjust-android-signature-3.6.0.aar
analysis/scripts/: decode_xor_strings.py  extract_ghidra_function.py
analysis/skill-eval/: baseline.md
analysis/tests/: test_extract_ghidra_function.py
analysis/upstream/adjust-signature/: adjust-android-signature-3.67.0.pom
docs/superpowers/plans/: 2026-07-10-libsigner-reverse-runtime.md
docs/superpowers/specs/: 2026-07-15-adjust-signature-sdk-downloader-design.md
files/: SimpleAnalyzer.java  SpringInsAnalyzer.java  UNIDBG_GUIDE.md  frida_hook_script.js
planA/: README.md  RUNBOOK.md  findings.md  libsig.txt  libsigner工程操作手册.docx  progress.md  task_plan.md
planA/.learnings/: ERRORS.md
planA/analysis/: verification.md
planA/analysis/skill-eval/: forward-test.md
planA/files/: README.md  UNIDBG_SUMMARY.md  native_analysis_report.md  pom.xml  quick_start.sh  reverse_engineering_guide.md
planA/py/: a.py
planA/recovered/: signature-vm-calls-x86_64.tsv  signer_pipeline.cpp  strings.json
planA/runtime/qbdi/: CMakeLists.txt  check-environment.sh
planA/runtime/qbdi/src/: android_attach_tracer.cpp  trace_schema.h
planA/runtime/qbdi/tests/: trace_schema_test.cpp
planA/runtime/unidbg/: README.md  pom.xml
planB/: PROJECT_MAP.md  QBDI01 - 原理分析.md  README.md  SO_REVERSE_STATUS.md  adjust-android-signature-3.67.0.aar  findings.md  generate-signer.sh  progress.md  run-java.sh  run-python.py  task_plan.md  test-api-contract.sh  test-device-reference.sh  test-external-structured-api.sh  test-full.sh  test-generate-signer-retry.sh  test-one-click-signer.sh  test-recovered-backend.sh  test-run-all.sh  test-run-python.sh  阻塞.md
planB/.codebase-memory/: artifact.json  graph.db.zst
planB/.omx/: 3c-128-sensors.json  3c-diff-appUid.json  3c-diff-appUid.stdout  3c-diff-build.json  3c-diff-build.stdout  3c-diff-display.json  3c-diff-display.stdout  3c-diff-jni.json  3c-diff-jni.stderr  3c-diff-jni.stdout  3c-diff-locale.json  3c-diff-locale.stdout  3c-diff-sensors.json  3c-diff-sensors.stdout  3c-diff-services.json  3c-diff-services.stdout  3c-diff-settings.json  3c-diff-settings.stdout  3c-diff-systemProperties.stdout  3c-diff-targetSdk.stdout  3c-diff-timezone.stdout  3c-min-01.json  3c-min-02.json  3c-min-03.json  3c-min-04.json  3c-min-05.json  3c-min-06.json  3c-min-07.json  3c-min-08.json  3c-min-09.json  3c-min-10.json  3c-min-11.json  3c-min-12.json  3c-min-13.json  3c-min-14.json  3c-min-15.json  3c-min-16.json  3c-min-17.json  3c-minimal-properties.json  3c-property-api23_empty.json  (+175 more)
planB/adjust-android-signature-3.67.0/: proguard.txt
planB/adjust-android-signature-3.67.0.aar.cache/: code-version  names-map
planB/device-reference/: AndroidManifest.xml  build-reference-apk.sh  reference-debug.keystore  run-reference.sh
planB/examples/: StructuredSignerExample.java  recovered-signer-job.json  signer-job.json
planB/native-reimplementation/: AUTHORIZED_STATIC_AUDIT_REPORT.md  CMakeLists.txt  FUNCTION_DELEGATION_MATRIX.md  NON_SENSITIVE_COMPATIBILITY.md  PROTECTED_ENGINE_STATIC_RECOVERY.md  README.md  RECOVERED_PRIMITIVES_AUDIT.md  SO_FUNCTION_COVERAGE.md  STATIC_ANALYSIS.md  audit-non-sensitive-boundary.sh  build-and-test.sh  build-compatibility-layer.sh  fake_signer_backend.cpp  fake_signer_backend.h  recovered_primitives.cpp  signer_backend_test.cpp  signer_bridge_production_config_test.cpp
planB/signer-implementations/: ARCHITECTURE.md  README.md  SOURCE_SNAPSHOTS.md  test-layout.sh  verify-all.sh
planB/signer-implementations/01-recovered-cpp/: CMakeLists.txt  README.md  build.sh  check.sh  run-example.sh
planB/signer-implementations/01-recovered-cpp/config/: input.env.example
planB/signer-implementations/01-recovered-cpp/docs/: COVERAGE.md  INPUT_CONTRACT.md  SECURITY_BOUNDARY.md
planB/signer-implementations/01-recovered-cpp/src/: recovered_primitives.cpp
planB/signer-implementations/02-vendor-jni-bridge/: CMakeLists.txt  README.md  audit-non-sensitive-boundary.sh  build-android.sh  build-host.sh  check.sh  test-self-contained.sh
planB/signer-implementations/02-vendor-jni-bridge/config/: vendor.env.example
planB/signer-implementations/02-vendor-jni-bridge/docs/: ERROR_MODEL.md  JNI_ABI.md  LIFECYCLE.md
planB/signer-implementations/02-vendor-jni-bridge/examples/: java_call_example.java  native_install_example.cpp
planB/signer-implementations/02-vendor-jni-bridge/include/: signer_backend.h  signer_jni_bridge.h
planB/signer-implementations/02-vendor-jni-bridge/src/: signer_backend.cpp  signer_jni_bridge.cpp
planB/signer-implementations/02-vendor-jni-bridge/tests/: signer_bridge_config_test.cpp
planB/unidbg-adjust-runner/: pom.xml
py/: AdjustSigner.java  hook1.java  some.cpp
recovered/: address-map.md  jni_contract.h  native-analysis.md  signature-vm-calls-arm64.tsv  vm-live-inputs.md  vm-zero-vector.json
runtime/unidbg/: run.sh
(+1493 files in other folders)
